6.1
	+ Fix broken link to zentyal store and tracker in dashboard widget
	+ Add log rotation for uwsgi.log
	+ Add "Smart Admin" > "System status report settings" feature to GUI
	+ Zentyal GUI supported by Safari
	+ Set uwsgi's custom log
	+ Add "Smart Admin" > "System Status Report" feature to GUI
	+ Update external link in EBox::Config
	+ Add "Smart Admin" menu entry
	+ Add smart-admin-report script to /usr/share/zentyal to get a complete system status report
	+ Distribution base is now Ubuntu 18.04.3 LTS
6.0.2
	+ Fix upgrade button
	+ Add release upgrade code (available to update from 6.0 to 6.1)
6.0.1
	+ Fix CSS for Activation Required page
	+ License activation after first login in commercial edition
6.0
	+ Add bash completion for zs command
	+ Simplify nginx.conf includes management
	+ Fix undefined $actualValue warning in ViewCustomizer
	+ Fix unitialized $filter warning in tableBody.mas
	+ Set default size of EBox::Types::Int to 6
	+ Use /etc/apt/auth.conf instead of embedding login info in sources.list
	+ Avoid use of apt-key add installing zentyal-qa pubkey in /etc/apt/trusted.gpg.d
	  as gnupg is no longer installed as dependency
	+ Login page form is now centered in a responsive way
	+ Simplify interpreter code and avoid warnings with HTML::Mason templates
	+ Allow new status field in daemon description to use a different daemon
	  name to check running status
	+ Syntax changes to be compliant with Perl 5.26
	+ Use 5.1-nss repo for NS license keys
	+ Allow offline license key validation
	+ Automatic save changes in license activation after first login
	+ Avoid errors when parsing JSON for dashboard widgets
	+ Force restore of configuration backup from 3.X by using custom script
	+ Adapt nginx conf to allow vncviewer for zentyal-virt
	+ Add zentyal-virt icon
	+ Add support for licenses with unlimited users
5.1.1
	+ Change trial messages to adapt to new 45-day period
	+ Add support for pepertual licenses
5.1