@@ -1,3 +1,5 @@
+HEAD
+	+ Add mail recipient for smart admin report
 6.1
 	+ Fix broken link to zentyal store and tracker in dashboard widget
 	+ Add log rotation for uwsgi.log
